tests/errors/unknown-recipe.chef
Unknown Recipe Test.

This recipe tries to serve with a recipe that doesn't exist.

Ingredients.
100 g flour

Method.
Put flour into mixing bowl.
Serve with nonexistent sauce.

Serves 1.
